--- a/JustMahout/.project
+++ b/JustMahout/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HelloMahout</name>
+	<name>JustMahout</name>
 	<comment></comment>
 	<projects>
 	</projects>
